SERVER-69389 Populate shadow collection catalog on clean shutdown

(cherry picked from commit 5457b4527960627071d26310111b29510105d42f)