src/mongo/db/catalog/collection_catalog.cpp
@@ -236,17 +236,19 @@ void CollectionCatalog::onCloseDatabase(OperationContext* opCtx, std::string dbN
     removeResource(rid, dbName);
 }
 
-void CollectionCatalog::onCloseCatalog(OperationContext* opCtx) {
-    invariant(opCtx->lockState()->isW());
+void CollectionCatalog::onCloseCatalog() {
     stdx::lock_guard<Latch> lock(_catalogLock);
-    invariant(!_shadowCatalog);
+
+    if (_shadowCatalog) {
+        return;
+    }
+
     _shadowCatalog.emplace();
     for (auto& entry : _catalog)
         _shadowCatalog->insert({entry.first, entry.second->ns()});
 }
 
-void CollectionCatalog::onOpenCatalog(OperationContext* opCtx) {
-    invariant(opCtx->lockState()->isW());
+void CollectionCatalog::onOpenCatalog() {
     stdx::lock_guard<Latch> lock(_catalogLock);
     invariant(_shadowCatalog);
     _shadowCatalog.reset();
