src/mongo/db/storage/storage_engine_impl.cpp
@@ -591,6 +591,7 @@ void StorageEngineImpl::cleanShutdown() {
         _timestampMonitor->removeListener(&_minOfCheckpointAndOldestTimestampListener);
     }
 
+    CollectionCatalog::get(getGlobalServiceContext()).onCloseCatalog();
     CollectionCatalog::get(getGlobalServiceContext()).deregisterAllCollections();
 
     _catalog.reset();
